[package]
name = "ipdb"
version = "0.1.0"
authors = ["yi lu <luyikk@126.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"]}
serde_json="1.0"

[dev-dependencies]
ipdb_rs="0.1.0"
lazy_static="1.4"

[profile.bench]
lto = 'fat'
codegen-units = 1
opt-level=3
debug-assertions=false